1.增加APP名称、logo 2.更改首页样式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="tips_page">input page number</string>
     <string name="rb_title_actress">artist</string>
     <string name="rb_title_modernist">modernist</string>
-    <string name="rb_title_abstractionism">abstractionism</string>
+    <string name="rb_title_abstractionism">abstract</string>
     <string name="btn_search">search</string>
     <string name="title_about">About</string>
     <string name="tab_title_intro">intro</string>
