--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">和风博物馆</string>
+    <string name="app_name">和風の博物館</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="bottom_text">%s/%s</string>
     <string name="tips_keyword">輸入關鍵字(建議使用繁體字)</string>
