--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="rb_title_abstractionism">abstract</string>
     <string name="btn_search">search</string>
     <string name="title_about">About</string>
+    <string name="title_setting">Setting</string>
     <string name="tab_title_intro">intro</string>
     <string name="tab_title_artist">artist</string>
     <string name="tab_title_gallery">gallery</string>
@@ -27,4 +28,5 @@
     <string name="item_info_hobby">hobby</string>
     <string name="title_detail">detail</string>
     <string name="title_toggle_img">Show the photo</string>
+    <string name="inivisible">inivisible</string>
 </resources>
