--- a/datacontentlayout/src/main/res/values/strings.xml
+++ b/datacontentlayout/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DataContentLayout</string>
+    <string name="loading">loading</string>
+    <string name="retry" translatable="false">retry</string>
 </resources>
