--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="rb_title_abstractionism">abstract</string>
     <string name="btn_search">search</string>
     <string name="title_about">About</string>
-    <string name="title_collect_list">collect list</string>
+    <string name="title_collect_list">favorite</string>
     <string name="title_setting">Setting</string>
     <string name="tab_title_intro">intro</string>
     <string name="tab_title_artist">artist</string>
@@ -42,5 +42,6 @@
     <string name="miss_permission">Lack of permissions</string>
     <string name="str_retry_apply">apply</string>
     <string name="action_cancel">cancel</string>
+    <string name="title_collect">favorite</string>
 
 </resources>
