增加视频链接

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="str_retry_apply">apply</string>
     <string name="action_cancel">cancel</string>
     <string name="title_collect">favorite</string>
+    <string name="tab_title_video">video</string>
 
 </resources>
