--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -14,7 +14,7 @@
     <string name="tab_title_intro">简介</string>
     <string name="tab_title_artist">艺术家</string>
     <string name="tab_title_gallery">画廊</string>
-    <string name="tab_title_relate">相关艺术品</string>
+    <string name="tab_title_relate">艺术品</string>
     <string name="tips_empty">暂无信息</string>
     <string name="str_unknown">不详</string>
 
@@ -42,5 +42,6 @@
     <string name="save_image_tips">你可以通过长按图片，进行保存</string>
     <string name="title_collect_list">收藏列表</string>
     <string name="title_collect">收藏列表</string>
+    <string name="tab_title_video">链接</string>
 
 </resources>
