--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -34,7 +34,7 @@
     <string name="inivisible">已隐藏</string>
 
     <string name="action_jump">跳转</string>
-    <string name="title_alert_dialog">为确保您能正常使用本APP的功能，请跳转到应用权限设置页面，开启相应的应用权限</string>
+    <string name="title_alert_dialog">为确保您能正常使用本APP的功能,请跳转到应用权限设置页面,开启相应的应用权限</string>
     <string name="tips_authority">读写权限是用于图片文件读取，请通过权限验证以确保APP的功能正常</string>
     <string name="miss_permission">权限缺失</string>
     <string name="miss_permission_tips">请同意这些权限，否则无法使用</string>
@@ -43,5 +43,6 @@
     <string name="title_collect_list">收藏列表</string>
     <string name="title_collect">收藏列表</string>
     <string name="tab_title_video">通道</string>
+    <string name="rb_title_main">主页</string>
 
 </resources>
