--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="save_image_tips">you can save the photo through long pressed</string>
     <string name="miss_permission_tips">Please agree to these permissions, otherwise they cannot be used</string>
 
-    <string name="title_alert_dialog" translatable="false">"To ensure that you can normally use the functions of the APP, please jump to the application permission and open the corresponding application permission "</string>
+    <string name="title_alert_dialog">"To ensure that you can normally use the functions of the APP, please jump to the application permission and open the corresponding application permission "</string>
 
     <string name="tips_authority">Read and write permission is used for image file reading. Please verify the permission to ensure the normal function of APP</string>
 
@@ -44,5 +44,6 @@
     <string name="action_cancel">cancel</string>
     <string name="title_collect">favorite</string>
     <string name="tab_title_video">bridge</string>
+    <string name="rb_title_main">main</string>
 
 </resources>
